fix z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,7 +31,7 @@ p {
 
 .btn {
   position: relative;
-  z-index: 0;
+  z-index: 100;
   margin: 0 1rem !important;
   padding: 0.4rem 0.6rem;
   &:before {
@@ -52,7 +52,7 @@ p {
 .display-3 {
   margin-top: 4rem;
 	position: relative;
-	z-index: 0;
+	z-index: 100;
 
 	&:before {
 		z-index: -1;
@@ -140,7 +140,7 @@ p {
 }
 
 .divider {
-  z-index: 100;
+  z-index: 101;
   height: 6%;
   width: 100%;
   position: fixed;
@@ -223,7 +223,7 @@ p {
 }
 
 .social-media {
-  z-index: 1;
+  z-index: 101;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
